css/atmos.css
/* ... */
.timeline-items,
.conversation-items {
	position: relative;
	padding-bottom: 57px;
	font-size: 0.9em;
}

.timeline-item-wrapper,
.conversation-item-wrapper {
	padding-left: 52px;
	border-top-style: none;
	border-left-style: none;
	border-right-style: none;
	border-bottom-style: solid;
	border-bottom-width: 2px;
	transition: all 0.5s ease-out 0;
}

.timeline-item,
.conversation-item {
	padding: 4px;
}

.timeline-item-avator,
.conversation-item-avator {
	float: left;
	width: 48px;
	margin-left: -52px;
	margin-right: 4px;
}

.timeline-item-avator > img,
.conversation-item-avator > img {
	max-width: 48px;
	max-height: 48px;
}

.timeline-item-timestamp,
.conversation-item-timestamp {
	float: right;
	font-size: 0.8em;
	padding-top: 2px;
}

.timeline-item-address,
.conversation-item-address {
	text-align: right;
}

.timeline-item-address > i,
.conversation-item-address > i {
	margin-right: 2px;
}

.timeline-item-address > span,
.conversation-item-address > span {
	margin-right: 0.4em;
}

.timeline-item-message,
.conversation-item-message {
	white-space: pre-wrap;
	word-wrap: break-word;
	margin-top: 2px;
	margin-bottom: 2px;
}

.timeline-item-footer,
.conversation-item-footer {
	font-size: 0.8em;
}

.reply-panel {
}

.reply-panel > a {
}

.conversation-main .reply-panel {
	margin-left: 10px;
}

.reaction-panel {
	float: right;
	opacity: 0;
	transition: opacity 0.5s ease-out 0;
	margin-right: 2px;
}

.timeline-item:hover > .timeline-item-footer > .reaction-panel,
.conversation-item:hover > .conversation-item-footer > .reaction-panel {
	opacity: 1;
}

.reaction-panel > a {
}

.reaction-count {
	padding-left: 0.3em;
}

.timeline-read-more {
	padding-top: 0.75em;
	padding-bottom: 0.75em;
	text-align: center;
}

.conversation-main.conversation-item-wrapper {
	padding-left: 0;
}

.conversation-main .conversation-header {
	float: none;
	display: inline-block;
	vertical-align: middle;
}

.conversation-main .conversation-item-user {
	display: inline-block;
}

.conversation-main .conversation-item-avator {
	float: none;
	margin-left: 0;
	margin-right: 0;
	display: inline-block;
}

.conversation-main .conversation-item-username {
	display: inline-block;
	padding-top: 1em;
	vertical-align: top;
}

.conversation-main .conversation-item-address {
	float: right;
	margin-top: 2em;
}

.conversation-main .conversation-item-message {
	font-size: 1.2em;
}

.conversation-main .conversation-item-timestamp {
	float: none;
	text-align: right;
}

.conversation-main .conversation-item-footer hr {
	border: none;
	height: 2px;
	margin-bottom: 5px;
}

.conversation-main .conversation-item-footer .reaction-panel {
	float: right;
	opacity: 1;
}

.atmos-modal-bg {
	display: none;
	position: absolute;
	left: 0px;
	top: 0px;
	width: 100%;
	height: 100%;
	z-index: 1;
}

.atmos-modal-wrapper {
	position: fixed;
	z-index: 2000;
	min-width: 300px;
	max-width: 500px;
	min-height: 200px;
	width: 50%;
	height: 50%;
	top: 50%;
	left: 50%;
	-webkit-transform: translateX(-50%) translateY(-50%);
	transform: translateX(-50%) translateY(-50%);
}

.atmos-modal {
	z-index: 2100;
	position: relative;
	margin: 0px auto;
}

.atmos-modal-header {
	padding: 0.5em;
	text-align: center;
}

.atmos-modal-window-button {
	float: right;
	padding: 0.5em;
	text-align: center;
}

.atmos-modal-body {
	padding: 0.5em;
	min-height: 100px;
//	text-align: center;
	font-size: 1.2em;
}

.atmos-modal-body p {
	padding: 1px;
}

.atmos-modal-body input,
.atmos-modal-body textarea,
.sender-panel input,
.sender-panel textarea {
	border-radius: 2px;
	box-shadow: none;
	-webkit-box-shadow: none;
	border-style: none;
	padding: 4px 6px 4px 6px;
	vertical-align: middle;
	font-size: 1em;
	margin: 3px 0 3px 0;
	line-height: 1.4em;
	width: 97%;
}

.atmos-modal-body textarea.addresses,
.sender-panel textarea.addresses {
	height: 2.5em;
}

.atmos-modal-body input[type=checkbox] {
	width: auto;
	text-align: left;
}

.atmos-modal-body input:focus,
.atmos-modal-body textarea:focus {
	outline-offset: -2px;
	outline-style: solid;
	outline-width: 2px;
	outline-color: rgba(200,200,200,0.5);
}

.atmos-modal-footer {
	padding: 0.5em;
	text-align: center;
}

.atmos-modal-footer button,
.sender-panel button {
	border: none;
	font-family: inherit;
	font-size: inherit;
	color: inherit;
	background: none;
	cursor: pointer;
	padding: 5px 10px;
	display: inline-block;
//	margin: 15px 30px;
	text-transform: uppercase;
	letter-spacing: 1px;
//	font-weight: 700;
	outline: none;
	position: relative;
	-webkit-transition: all 0.3s;
	-moz-transition: all 0.3s;
	transition: all 0.3s;

//	background: #823aa0;
//	color: #fff;
	height: 30px;
	min-width: 100px;
	line-height: 24px;
	font-size: 1.1em;
	overflow: hidden;
	-webkit-backface-visibility: hidden;
	-moz-backface-visibility: hidden;
	backface-visibility: hidden;
}

.atmos-modal-footer button:after,
.sender-panel button:after {
	content: '';
	position: absolute;
	z-index: -1;
	-webkit-transition: all 0.3s;
	-moz-transition: all 0.3s;
	transition: all 0.3s;
}

.atmos-modal-footer button:active,
.sender-panel button:active {
	top: 2px;
}

.atmos-modal-footer button span,
.sender-panel button span {
	display: inline-block;
	width: 100%;
	height: 100%;
	-webkit-transition: all 0.3s;
	-webkit-backface-visibility: hidden;
	-moz-transition: all 0.3s;
	-moz-backface-visibility: hidden;
	transition: all 0.3s;
	backface-visibility: hidden;
}

.atmos-modal-footer button:before,
.sender-panel button:before {
	position: absolute;
	height: 100%;
	width: 100%;
//	line-height: 2.5;
//	font-size: 180%;
	-webkit-transition: all 0.3s;
	-moz-transition: all 0.3s;
	transition: all 0.3s;
}

.atmos-modal-footer button:active:before,
.sender-panel button:active:before {
	color: #703b87;
}
/* ... */

